# foldermix

./: .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pr-agent-context-template.md
.github/workflows/: ci.yml  docs-site.yml  mutation.yml  perf-smoke.yml  security-audit.yml
docs/: agents.md  compliance-safety.md  config-first-workflows.md  homebrew-core.md  maintainer-playbook.md
foldermix/: __init__.py  cli.py  config.py  config_loader.py  effective_config.py  init_profiles.py  packer.py  policy_packs.py  report.py  scanner.py  stdin_paths.py  utils.py  warning_taxonomy.py
foldermix/converters/: _normalize.py  docx_fallback.py  ipynb.py  markitdown_conv.py  pdf_fallback.py  registry.py  text.py  xlsx_fallback.py
foldermix/writers/: __init__.py  base.py  jsonl_writer.py  markdown_writer.py  xml_writer.py
folderpack/: __init__.py  cli.py  config.py  packer.py  utils.py
folderpack/converters/: base.py  pptx_fallback.py  text.py
folderpack/writers/: markdown_writer.py  xml_writer.py
scripts/: open_release_pr.py  render_homebrew_formula.py
site-docs/: index.md
tests/: conftest.py  snapshot_helpers.py  test_cli.py  test_cli_entrypoint.py  test_cli_init.py  test_cli_stdin.py  test_config_loader.py  test_converters.py  test_converters_fallback.py  test_effective_config.py  test_init_profiles.py  test_open_release_pr_script.py  test_packer.py  test_packer_edges.py  test_perf_smoke.py  test_policy_packs.py  test_render_homebrew_formula.py  test_report.py  test_scanner.py  test_scanner_edge.py  test_scanner_properties.py  test_snapshot_guard.py  test_stdin_paths.py  test_utils.py  test_version_module.py  test_writers.py  test_writers_edge.py
tests/data/: sample.md  sample.txt
tests/data/init_profiles/: course-refresh.toml  engineering-docs.toml  legal.toml  research.toml  support.toml
tests/data/nested/: child.txt
tests/integration/: test_converters_noisy_real_files.py  test_converters_real_files.py  test_pack_outputs.py  test_pack_outputs_structured.py  test_policy_cross_platform.py  test_policy_packs.py
tests/integration/fixtures/expected/: policy_cross_platform_summary.json  policy_pack_deltas.json  simple_project.jsonl  simple_project.md  simple_project.xml
tests/integration/fixtures/expected/real_files/: sample_docx.txt  sample_pdf.txt  sample_pptx.txt  sample_xlsx.txt
tests/integration/fixtures/noisy_real_files/: noisy_feedback.docx  noisy_grades.xlsx
tests/integration/fixtures/policy_cross_platform_corpus/: .hidden-note.txt  README.md  latin1.txt  secrets.key  windows_newlines.txt
tests/integration/fixtures/policy_cross_platform_corpus/data/: sample.csv
tests/integration/fixtures/policy_cross_platform_corpus/nested folder/: space name.txt
tests/integration/fixtures/policy_pack_corpus/: .hidden-note.txt  legal_memo.txt  secrets.txt  support-trace.txt  ticket.txt
tests/integration/fixtures/real_files/: sample.docx  sample.pptx  sample.xlsx
