[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folderpack"
version = "0.1.0"
description = "Pack a folder into a single LLM-friendly context file"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["llm", "context", "packing", "cli"]
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pathspec>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=3.0"]
office = ["python-docx>=1.0", "openpyxl>=3.1", "python-pptx>=0.6"]
markitdown = ["markitdown>=0.0.1"]
all = [
    "pypdf>=3.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "tqdm>=4.0",
]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.4"]

[project.scripts]
folderpack = "folderpack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["folderpack"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
